; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lstrlib.c_min_expand.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lstrlib.c_min_expand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_4__*, i8*, i8*, i8*)* @min_expand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @min_expand(%struct.TYPE_4__* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  br label %11

11:                                               ; preds = %40, %4
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  %16 = call i8* @match(%struct.TYPE_4__* %12, i8* %13, i8* %15)
  store i8* %16, i8** %10, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = load i8*, i8** %10, align 8
  store i8* %20, i8** %5, align 8
  br label %41

21:                                               ; preds = %11
  %22 = load i8*, i8** %7, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  %26 = icmp ult i8* %22, %25
  br i1 %26, label %27, label %38

27:                                               ; preds = %21
  %28 = load i8*, i8** %7, align 8
  %29 = load i8, i8* %28, align 1
  %30 = call i32 @uchar(i8 signext %29)
  %31 = load i8*, i8** %8, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = call i64 @singlematch(i32 %30, i8* %31, i8* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %27
  %36 = load i8*, i8** %7, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %7, align 8
  br label %39

38:                                               ; preds = %27, %21
  store i8* null, i8** %5, align 8
  br label %41

39:                                               ; preds = %35
  br label %40

40:                                               ; preds = %39
  br label %11

41:                                               ; preds = %38, %19
  %42 = load i8*, i8** %5, align 8
  ret i8* %42
}

declare dso_local i8* @match(%struct.TYPE_4__*, i8*, i8*) #1

declare dso_local i64 @singlematch(i32, i8*, i8*) #1

declare dso_local i32 @uchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
